@@ -25,6 +25,8 @@ Version 0.8 (in development)
 - The `get_style_defs` method of HTML formatters now uses the `cssclass`
   option as the default selector if it was given.
 
+- Added a Redcode lexer, thanks to Adam Blinkinsop.
+
 
 Version 0.7.1
 -------------
